Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18107

"Run without deploy" does not bring app to foreground if simulator is not yet running

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.3.0-rc1
    • Qt Creator 4.3.0-beta1
    • iOS Support
    • macOS 10.12

      1. run your app on the simulator
      2. quit simulator
      3. Build > Run Without Deployment, or click the run button in application output pane

      Simulator starts, application looks started but is not visible in simulator. Stopping and re-running the app from Qt Creator then works while the simulator is still open. Running with deployment also works find even if the simulator is not running.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vikas Vikas Pachdha
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes